[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/UI/Settings/Components/UISettingCheckbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Settings/GameplaySettings.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Settings/ThemeSelector.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/Settings/BackgroundSelector.tscn" type="PackedScene" id=4]

[node name="GameplaySettings" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 17.0
offset_right = -20.0
offset_bottom = -17.0
script = ExtResource( 2 )

[node name="DragInput" parent="." instance=ExtResource( 1 )]
anchor_right = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 984.0
offset_bottom = 45.0
custom_minimum_size = Vector2( 0, 45 )
tooltip_text = "Move blocks by dragging instead of clicking"
title = "Drag Input"

[node name="Spacer" type="Control" parent="."]
offset_top = 49.0
offset_right = 984.0
offset_bottom = 84.0
custom_minimum_size = Vector2( 0, 35 )
size_flags_stretch_ratio = 5.5

[node name="Label" type="Label" parent="."]
offset_top = 88.0
offset_right = 984.0
offset_bottom = 109.0
text = "Customization"
align = 1

[node name="HSeparator" type="HSeparator" parent="."]
offset_top = 113.0
offset_right = 984.0
offset_bottom = 117.0

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PackedStringArray( "BgSelect" ), [ ExtResource( 4 ) ] ]

[node name="ThemeSelector" parent="." instance=ExtResource( 3 )]
offset_top = 121.0
offset_bottom = 166.0
custom_minimum_size = Vector2( 0, 45 )

[node name="Spacer2" type="Control" parent="."]
offset_top = 170.0
offset_right = 984.0
offset_bottom = 190.0
custom_minimum_size = Vector2( 0, 20 )
size_flags_stretch_ratio = 5.5

[node name="ChangeBackground" type="Button" parent="."]
offset_left = 399.0
offset_top = 194.0
offset_right = 584.0
offset_bottom = 244.0
custom_minimum_size = Vector2( 0, 50 )
size_flags_horizontal = 4
text = "Change Background"

[connection signal="toggled" from="DragInput" to="." method="_on_DragInput_toggled"]
[connection signal="pressed" from="ChangeBackground" to="." method="_on_ChangeBackground_pressed"]
